# Catalogizer

./: .env.example  .env.security  .gitignore  .gitmodules  .pre-commit-config.yaml  .snyk.json  AGENTS.md  ARCHITECTURE.md  CATALOGIZER_QA.md  CATALOGIZER_ROADMAP_V3.md  CLAUDE.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_PROJECT_STATUS_AND_PLAN.md  COMPREHENSIVE_STATUS_REPORT.md  DEPLOYMENT.md  DOCKER_SETUP.md  ENHANCED_IMPLEMENTATION_COMPLETE.md  FINAL_COMPLETION_REPORT.md  FINAL_POLISH_REPORT.md  FINAL_PROGRESS_REPORT.md  FINAL_SUMMARY_REPORT.md  FINAL_TEST_REPORT.md  FIXES_APPLIED.md  GEMINI.md  GETTING_STARTED.md  HELIXQA_AUTONOMOUS_QA_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_PROGRESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TRACKING.md  INSTALLER_WIZARD_SUMMARY.md  MASTER_IMPLEMENTATION_INDEX.md  MEMORY.md  PHASE1_PROGRESS_UPDATE.md  PHASE2_4_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE_0_COMPLETION_REPORT.md  PHASE_1_PROGRESS_REPORT.md  PHASE_2_FEATURE_DOCUMENTATION.md  PHASE_2_IMPLEMENTATION_DOCUMENTATION.md  (+46 more)
Catalogizer/: .gitignore  README.md  settings.gradle.kts
LLMsVerifier/: go.mod
Upstreams/: GitFlic.sh  GitFlicVasicDigital.sh  GitHub.sh  GitHubVasicDigital.sh  GitLab.sh  GitLabVasicDigital.sh  GitVerse.sh  GitVerseVasicDigital.sh  Gitee.sh
Website/: CLAUDE.md  changelog.md  course.md  documentation.md  download.md  faq.md  features.md  getting-started.md  index.md  package-lock.json  package.json  support.md
build-scripts/: build-all.sh
catalog-api/: .env.example  .gitignore  .golangci.yml  CHANGES.md  CONVERSION_API_DOCUMENTATION.md  CONVERSION_DEPLOYMENT_GUIDE.md  CONVERSION_FINAL_SUMMARY.md  CONVERSION_IMPLEMENTATION_COMPLETE.md  CONVERSION_IMPLEMENTATION_STATUS.md  Dockerfile  Dockerfile.dev  MEDIA_SYSTEM_README.md  PHASE1_COMPLETION_REPORT.md  README.md  TEST_FIX_SUMMARY.md  challenge_ids.txt  challenge_ids.txt.bak  check_scans.sh  config.json  continue_challenges.sh  coverage-summary.txt  coverage.html  go.mod  go.sum  main.go  main_test.go  result_asset-lazy-loading.json  result_asset-serving.json  result_auth-token-refresh.json  result_browsing-api-catalog.json  result_browsing_api_catalog_new.json  result_browsing_api_health.json  result_browsing_catalog2.json  result_browsing_web_app.json  result_browsing_web_app2.json  result_collections.json  result_collections_api.json  result_collections_api_new.json  result_collections_api_new2.json  result_comics_scan.json  (+28 more)
catalog-web/: .eslintrc.js  Dockerfile  IMPLEMENTATION-STATUS.md  PHASE-3.2.6-SUMMARY.md  PHASE3_1_COMPLETE.md  PHASE3_2_PLAN.md  PHASE_3_2_3_COMPLETE.md  PHASE_3_2_4_PLAN.md  PLAYLIST_IMPLEMENTATION_STATUS.md  README.md  index.html  jest.config.js  lighthouserc.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  (+4 more)
catalogizer-desktop/src-tauri/: Cargo.toml  tauri.conf.json
catalogizer-desktop/src-tauri/icons/: icon.icns
catalogizer-desktop/src-tauri/src/: main.rs
installer-wizard/src-tauri/: Cargo.toml  tauri.conf.json
installer-wizard/src-tauri/src/: ftp.rs  local.rs  main.rs  network.rs  nfs.rs  smb.rs  webdav.rs
(+1753 files in other folders)
